--- a/e-commerce/assets/styles.css
+++ b/e-commerce/assets/styles.css
@@ -19,6 +19,14 @@
             font-size: 24px;
             font-weight: bold;
         }*/
+
+
+        .ancizar-serif {
+        font-family: "Ancizar Serif", serif;
+        font-optical-sizing: auto;
+        font-weight: weight;
+        font-style: normal;
+        }
         .navbar{
             
 
@@ -72,6 +80,27 @@
                 border-radius: 10px;
                 box-shadow: 0 2px 5px rgba(0,0,0,0.1);
                 text-align: center;
+            }
+        }
+
+        .flex-container{
+            position:absolute;
+            display:flex;
+            flex-direction:column;
+            align-items:center;
+            justify-content:center;
+            width:100%;
+            height:100%;
+            margin-top: 100px;
+            .card{
+                background-color: #f4f4f4;
+                color:black;
+                font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+                padding: 20px;
+                border-radius: 10px;
+                box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+                text-align: center;
+                width: 80%; /* Adjust width as needed */
             }
         }
 
